--- a/Prototype.html
+++ b/Prototype.html
@@ -271,16 +271,16 @@ const indicationColors = {
     "India": "#fc0000"
   },
   "Brain Metastasis": {
-    "EU4+UK": "#6f92f8",
-    "US": "#33c399",
-    "Japan": "#f7b733",
-    "India": "#ff3333"
+    "EU4+UK": "#a5bdfb", // was OPBT
+    "US": "#66d9b2",     // was OPBT
+    "Japan": "#f9cd66",  // was OPBT
+    "India": "#ff6666"   // was OPBT
   },
   "OPBT": {
-    "EU4+UK": "#a5bdfb",
-    "US": "#66d9b2",
-    "Japan": "#f9cd66",
-    "India": "#ff6666"
+    "EU4+UK": "#dbe7ff", // lighter step from BM
+    "US": "#aaf0d9",
+    "Japan": "#fde69c",
+    "India": "#ff9999"
   }
 };
 
